--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-        <h1>Welcom to my Website</h1>
+        <h1>Welcome to my Website</h1>
         <hr />
         <p>Hi. I'm Mykola, but you can call me Nicolas <br />
             Nice to meet you. </p>
